--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html lang="ka">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="ონლაინ მაღაზია">
+    <meta name="keywords" content="HTML, CSS, JavaScript, slider">
+    <meta name="author" content="ნინი აბრამიშვილი">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- fb meta tags -->
+    <meta
+    property="og:url"
+    content=""
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="თანამგზავრი" />
+  <meta property="og:description" content="ონლაინ მაღაზია" />
+  <meta
+    property="og:image"
+    content="https://img.freepik.com/premium-photo/astronaut-outer-open-space-planet-earth-stars-provide-background-erforming-space-planet-earth-sunrise-sunset-our-home-iss-elements-this-image-furnished-by-nasa_150455-16829.jpg?w=2000"
+  />
+
     <title>თანამგზავრი</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
