--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <header class="header">
@@ -39,21 +40,23 @@
             </a>
             <nav class="navigation" id="nav-bar">
                 <ul class="ul">
-                    <a href="#header">
-                        <li class="nav-li">მთავარი</li>
-                    </a>
-                    <a href="#section2">
-                        <li class="nav-li">ჩვენ შესახებ</li>
-                    </a>
-                    <a href="#section3">
-                        <li class="nav-li">ჩვენი გუნდი</li>
-                    </a>
-                    <a href="#section4">
-                        <li class="nav-li">კონტაქტი</li>
-                    </a>
-                    <a href="#section5">
-                        <i class="fa-solid fa-user"></i>
-                    </a>
+                    <li class="nav-li">
+                        <a class="nav-a" href="#header">მთავარი</a>
+                    </li>
+                    <li class="nav-li">
+                        <a class="nav-a" href="#section2">ჩვენ შესახებ</a>
+                    </li>
+                    <li class="nav-li">
+                        <a class="nav-a" href="#section3">ჩვენი გუნდი</a>
+                    </li>
+                    <li class="nav-li">
+                        <a class="nav-a" href="#section4">კონტაქტი</a>
+                    </li>
+                    <li class="nav-li">
+                        <a class="nav-a" href="#section5">
+                            <i class="fa-solid fa-user"></i> 
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <div class="burger-menu" id="burger-Bar">
