--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-</head>
+    
+
 <body>
     <header class="header">
-        <div class="header-wrapper">
+        <div class="header-wrapper" id="myHeader">
             <a href="index.html">
                 <div class="logo-div">
                     <img class="logo" src="images/icons8-yarn-64.png" alt="logo">
@@ -59,6 +60,10 @@
                     </li>
                 </ul>
             </nav>
+            <!-- <div class="search-form">
+                <input class="search" type="search" id="search-box" placeholder="მოძებნე აქ...">
+                <label for="search-box" class="fas fa-search"></label>
+            </div> -->
             <div class="burger-menu" id="burger-Bar">
                 <div class="line line1"></div>
                 <div class="line line2"></div>
@@ -94,10 +99,19 @@
         </div>
     </section>
 
+
+    <section class="our-customers">
+        <div id="api-user-email">
+            <ul id="ul-list"></ul>
+        </div>
+        <button id="loadPrev">load Previous Users</button>
+        <button id="loadNext">load next users</button>
+    </section>
+
     <section class="contact-section" id="section4">
         <div class="contact-section-div">
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.583481952343!2d44.87702091454329!3d41.707926579236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440d88859b1bdb%3A0xa2c45eaffc88556a!2s24%20Sesilia%20Takaishvili%20St%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1669664913859!5m2!1sen!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.583481952343!2d44.87702091454329!3d41.707926579236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440d88859b1bdb%3A0xa2c45eaffc88556a!2s24%20Sesilia%20Takaishvili%20St%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1669664913859!5m2!1sen!2sge" width="100%" height="450"></iframe>
             </div>
             <div class="contact-div">
                 <h3 class="h3">კონტაქტი</h3>
@@ -115,8 +129,41 @@
         </div>
 
     </section>
-
-
+    <section  id="section5">
+        <div class="registration-form">
+            <div class="form">
+                <h2 class="form-heading">სარეგისტრაციო ფორმა</h2>
+                <form action="#" method="POST" id="contact-form">
+                    <div>
+                        <input class="input" type="text" name="username" id="usernameField" placeholder="სახელი" />
+                        <span class="error-text" id="error_username"></span>
+                      </div>
+                    <div>
+                        <input class="input" type="password" name="password"id="passwordField"placeholder="პაროლი"/>
+                        <span class="error-text" id="error_password"></span>
+                      </div>
+                      <div>
+                        <input class="input" type="password"name="password2" id="passwordFieldrepeat"placeholder="გაიმეორე პაროლი"/>
+                        <span class="error-text" id="error_password2"></span>
+                      </div>
+                      <div>
+                        <input class="input" type="email" id="emailField" name="email" placeholder="მეილი" />
+                        <span id="text"></span>
+                      </div>
+                      <div>
+                        <input  type="checkbox" name="agree" id="agreeTerms" />
+                        <label class="input-check" for="agreeTerms">ვეთანხმები წესებს და პირობებს</label>
+                        <span class="error-text" id="error_agree"></span>
+                      </div>
+                      <button class="send-button" type="submit">გაგზავნა</button>
+                    </form>
+            </div>
+            <div class="img-div">
+                <img class="image" src="images/sweater.jpg" alt="sweaterimg">
+            </div>
+        </div>
+    </section>
+      
     <footer class="footer">
         <div class="footer-bg">
             <div class="logo-div1">
@@ -131,7 +178,7 @@
                     </div>
                 </div>
             </div>
-            <div class="booter-bg1">
+            <div class="footer-bg1">
                 <h3 class="h3">ლინკები</h3>
                 <ul class="ul1">
                     <a href="index.html">
@@ -169,6 +216,7 @@
             </div>
         </div>
     </footer>
+    <script src="ajax.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
