--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="nav-a" href="#section2">ჩვენ შესახებ</a>
                     </li>
                     <li class="nav-li">
-                        <a class="nav-a" href="#section3">ჩვენი გუნდი</a>
+                        <a class="nav-a" href="#section3">ჩვენი მომხმარებელი</a>
                     </li>
                     <li class="nav-li">
                         <a class="nav-a" href="#section4">კონტაქტი</a>
@@ -100,12 +100,14 @@
     </section>
 
 
-    <section class="our-customers">
-        <div id="api-user-email">
-            <ul id="ul-list"></ul>
+    <section class="our-customers" id="section3">
+        <div class="our-customer-div">
+            <div id="api-user-email">
+                <ul id="ul-list"></ul>
+            </div>
+            <button id="loadPrev">უკან</button>
+            <button id="loadNext">წინ</button>
         </div>
-        <button id="loadPrev">load Previous Users</button>
-        <button id="loadNext">load next users</button>
     </section>
 
     <section class="contact-section" id="section4">
