--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
     <section id="section3">
         <div class="slider">
             <div class="slide-ana">
-                <div style="background-image: url('https://source.unsplash.com/1600x600/?cat')"><span class="title">შეუკვეთე</span></div>
-                <div style="background-image: url('https://source.unsplash.com/1600x600/?dog')"><span class="title">შეუკვეთე</span></div>
-                <div style="background-image: url('https://source.unsplash.com/1600x600/?monkey')"><span class="title">შეუკვეთე</span></div>
-                <div style="background-image: url('https://source.unsplash.com/1600x600/?nature')"><span class="title">შეუკვეთე</span></div>
+                <div style="background-image: url('images/image5.jpg')"><span class="title">შეუკვეთე</span></div>
+                <div style="background-image: url('images/image4.jpg')"><span class="title">შეუკვეთე</span></div>
+                <div style="background-image: url('images/image1.jpg')"><span class="title">შეუკვეთე</span></div>
+                <div style="background-image: url('images/image0.jpg')"><span class="title">შეუკვეთე</span></div>
             </div>
             <span class="icon-arrow_back" id="prev"></span>
             <span class="icon-arrow_forward" id="next"></span>
