--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
     <section id="section3">
         <div class="slider">
             <div class="slide-ana">
-                <div style="background-image: url('images/image1.jpg')"><span class="title">შეუკვეთე</span></div>
-                <div style="background-image: url('images/image0.jpg')"><span class="title">შეუკვეთე</span></div>
-                <div style="background-image: url('images/image2.jpg')"><span class="title">შეუკვეთე</span></div>
-                <div style="background-image: url('images/image3.jpg')"><span class="title">შეუკვეთე</span></div>
+                <div style="background-image: url('images/image1.jpg')"></div>
+                <div style="background-image: url('images/image0.jpg')"></div>
+                <div style="background-image: url('images/image2.jpg')"></div>
+                <div style="background-image: url('images/image3.jpg')"></div>
             </div>
             <span class="icon-arrow_back" id="prev"></span>
             <span class="icon-arrow_forward" id="next"></span>
@@ -124,7 +124,7 @@
     </section>
 
     <section id="section4">
-        <div class="registration-form" >
+        <div class="registration-form" id="registrationForm" >
             <div class="form">
                 <h2 class="form-heading">სარეგისტრაციო ფორმა</h2>
                 <form action="#" method="POST" id="contact-form">
@@ -137,7 +137,7 @@
                         <span class="error-text" id="error_password"></span>
                       </div>
                       <div>
-                        <input class="input" type="password"name="password2" id="passwordFieldrepeat"placeholder="გაიმეორე პაროლი"/>
+                        <input class="input" type="password"name="password2" id="passwordFieldRepeat"placeholder="გაიმეორე პაროლი"/>
                         <span class="error-text" id="error_password2"></span>
                       </div>
                       <div>
