--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ka">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="ონლაინ მაღაზია">
     <meta name="keywords" content="HTML, CSS, JavaScript, slider">
     <meta name="author" content="ნინი აბრამიშვილი">
@@ -12,14 +12,14 @@
     <meta
     property="og:url"
     content="ონლაინ მაღაზია"
-  />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="თანამგზავრი" />
-  <meta property="og:description" content="ონლაინ მაღაზია" />
+  >
+  <meta property="og:type" content="website" >
+  <meta property="og:title" content="თანამგზავრი" >
+  <meta property="og:description" content="ონლაინ მაღაზია">
   <meta
     property="og:image"
     content="https://img.freepik.com/premium-photo/astronaut-outer-open-space-planet-earth-stars-provide-background-erforming-space-planet-earth-sunrise-sunset-our-home-iss-elements-this-image-furnished-by-nasa_150455-16829.jpg?w=2000"
-  />
+  >
 
     <title>თანამგზავრი</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
     
 </head>
@@ -133,11 +133,11 @@
                         <span class="error-text" id="error_username"></span>
                       </div>
                     <div>
-                        <input class="input" type="password" name="password"id="passwordField"placeholder="პაროლი"/>
+                        <input class="input" type="password" name="password" id="passwordField"placeholder="პაროლი"/>
                         <span class="error-text" id="error_password"></span>
                       </div>
                       <div>
-                        <input class="input" type="password"name="password2" id="passwordFieldRepeat"placeholder="გაიმეორე პაროლი"/>
+                        <input class="input" type="password" name="password2" id="passwordFieldRepeat"placeholder="გაიმეორე პაროლი"/>
                         <span class="error-text" id="error_password2"></span>
                       </div>
                       <div>
@@ -211,23 +211,26 @@
             <div class="footer-bg1">
                 <h3 class="h3">ლინკები</h3>
                 <ul class="ul1">
-                    <a href="#header">
-                        <li class="nav-li1">მთავარი</li>
-                    </a>
-                    <a href="#section1">
-                        <li class="nav-li1">ჩვენ შესახებ</li>
-                    </a>
-                    <a href="#section2">
-                        <li class="nav-li1">ჩვენი მომხმარებელი</li>
-                    </a>
-                    <a href="#section4">
-                        <li class="nav-li1">კონტაქტი</li>
-                    </a>
-                    <a href="#section3">
-                        <li class="nav-li1">რეგისტრაცია
-                            <i class="fa-solid fa-user nav-li"></i>
-                        </li>
-                    </a>
+                    <li class="nav-li1">
+                        <a class="nav-a f" href="#header">მთავარი</a>
+                    </li>
+                    <li class="nav-li1">
+                        <a class="nav-a f" href="#section1">ჩვენ შესახებ</a>
+                    </li>
+                    <li class="nav-li1">
+                        <a class="nav-a f" href="#section2">ჩვენი მომხმარებელი</a>
+                    </li>
+                    <li class="nav-li1">
+                        <a class="nav-a f" href="#section3">გალერეა</a>
+                    </li>
+                    <li class="nav-li1">
+                        <a class="nav-a f" href="#section5">კონტაქტი</a>
+                    </li>
+                    <li class="nav-li1">
+                        <a class="nav-a f" href="#section4">
+                            <i class="fa-solid fa-user"></i> 
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="footer-bg2">
