--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
             </div>
         </div>
     </footer>
-    <script src="main.js"></script>
-    <script src="ajax.js"></script>
-    <script src="script.js"></script>
+    <script src="javascript/main.js"></script>
+    <script src="javascript/ajax.js"></script>
+    <script src="javascript/script.js"></script>
 </body>
 </html>
